[package]
name = "prometheus_push"
version = "0.4.0"
edition = "2021"
authors = ["Mathias Oertel <mathias.oertel@pm.me>"]
description = "Crate to extend prometheus crates with pushgateway support"
documentation = "https://docs.rs/prometheus_push"
readme = "README.md"
keywords = ["prometheus", "pushgateway", "metrics", "oberservability"]
license = "MIT"
repository = "https://github.com/maoertel/prometheus-push"

[package.metadata.docs.rs]
features = ["blocking", "with_reqwest", "with_reqwest_blocking"]

[dependencies]
url = "2.4"
async-trait = { version = "0.1", optional = true }
prometheus = {version = "0.13", optional = true }
prometheus-client = { version = "0.22", default-features = false, optional = true }
reqwest = { version = "0.11", default-features = false, optional = true }
log = { version = "0.4", default-features = false, optional = true }

[features]
default = ["non_blocking"]
non_blocking = ["async-trait"]
blocking = []
prometheus_crate = ["prometheus"]
prometheus_client_crate = ["prometheus-client"]
with_reqwest = ["non_blocking", "reqwest", "log"]
with_reqwest_blocking = ["blocking", "reqwest/blocking", "log"]
